testsuite/tests/package/package07e.stderr

package07e.hs:2:1: error:
    Could not find module ‘MyHsTypes’
    Perhaps you meant HsTypes (needs flag -package-key ghc-8.7)
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.

package07e.hs:3:1: error:
    Could not load module ‘HsTypes’
    It is a member of the hidden package ‘ghc-8.7’.
    You can run ‘:set -package ghc’ to expose it.
    (Note: this unloads all the modules in the current scope.)
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.

package07e.hs:4:1: error:
    Could not load module ‘HsUtils’
    It is a member of the hidden package ‘ghc-8.7’.
    You can run ‘:set -package ghc’ to expose it.
    (Note: this unloads all the modules in the current scope.)
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.

package07e.hs:5:1: error:
    Could not load module ‘UniqFM’
    It is a member of the hidden package ‘ghc-8.7’.
    You can run ‘:set -package ghc’ to expose it.
    (Note: this unloads all the modules in the current scope.)
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
